# MySQL

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/MySQL/: MySQL_Connect.py  __init__.py
src/MySQL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_MySQL_Connect.py
